--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,3 +13,7 @@ jobs:
           node-version: "18"
       - run: npm ci
       - run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
